--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'com.github.johnrengelman.shadow' version '4.0.2'
+}
 
 group = pluginGroup
 version = pluginVersion
+
+compileJava.options.encoding = 'UTF-8'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -21,6 +26,9 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.destroystokyo.paper:paper-api:1.14.1-R0.1-SNAPSHOT'
+    compile 'com.zaxxer:HikariCP:3.3.1'
+    compile 'com.google.guava:guava:28.0-jre'
+    compile 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
