--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,5 @@ description: Helps manage builder tasks and jobs.
 website: www.stealwonders.de
 
 commands:
-  job:
-    aliases: [jobs]
-    description: The main job command that handles everything.
+  # handled by the Aikar annotation command framework (ACF).
+
