--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ dependencies {
     compile 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     compile 'com.zaxxer:HikariCP:3.3.1'
     compile 'com.google.guava:guava:28.0-jre'
-    compile "co.aikar:acf-paper:0.5.0-SNAPSHOT"
-    compile "co.aikar:idb-core:1.0.0-SNAPSHOT"
+    compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
+    compile 'co.aikar:idb-core:1.0.0-SNAPSHOT'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
