--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,18 @@ repositories {
     }
 }
 
+compileJava {
+    options.compilerArgs += ["-parameters"]
+    options.fork = true
+    options.forkOptions.executable = 'javac'
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'com.destroystokyo.paper:paper-api:1.14.1-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper-api:1.14.1-R0.1-SNAPSHOT'
+    compileOnly 'com.google.guava:guava:28.0-jre'
     //compile 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     compile 'com.zaxxer:HikariCP:2.4.1'
-    compile 'com.google.guava:guava:28.0-jre'
     compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
     compile 'co.aikar:idb-core:1.0.0-SNAPSHOT'
 }
