--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'com.google.guava:guava:28.0-jre'
-    //compile 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     compile 'com.zaxxer:HikariCP:2.4.1'
+    compile 'org.mariadb.jdbc:mariadb-java-client:2.4.1'
     compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
-    compile 'co.aikar:idb-core:1.0.0-SNAPSHOT'
+    compile 'co.aikar:taskchain-bukkit:3.7.2'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
