MariaDB driver is now relocated to prevent any interfierence with other plugins. Also removed old IDB dependency.

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 shadowJar {
     relocate 'co.aikar.commands', 'de.stealwonders.epicjobs.acf'
-    relocate 'co.aikar.idb', 'de.stealwonders.epicjobs.idb'
+    relocate 'org.mariadb.jdbc', 'de.stealwonders.epicjobs.jdbc'
 }
 
 build.dependsOn shadowJar
