Added a library for more advanced text formatting and edited the job info command.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'org.mariadb.jdbc:mariadb-java-client:2.5.4'
     compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
     compile 'co.aikar:taskchain-bukkit:3.7.2'
+    compile 'net.kyori:text-adapter-bukkit:3.0.3'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
