Added username lookup by uuid and completed more messages for job command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,8 @@ authors: [StealWonders]
 description: Helps manage builder tasks and jobs.
 website: www.stealwonders.de
 
+depend: [PlayerUUIDCache]
+
 commands:
   # handled by the Aikar annotation command framework (ACF).
 
