--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+    maven {
+        name = 'brokko-repo'
+        url = 'https://www.iani.de/nexus/content/groups/public'
+    }
 }
 
 compileJava {
@@ -36,6 +40,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'com.destroystokyo.paper:paper-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'com.google.guava:guava:28.0-jre'
+    compileOnly 'de.iani.cubeside:PlayerUUIDCache:1.5.1-SNAPSHOT'
     compile 'com.zaxxer:HikariCP:3.4.2'
     compile 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
     compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
