Plugin now loads after Multiverse, might look into a better way of achieving this though. Should fix issue where jobs and projects wouldn't load on first start.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,7 @@ authors: [StealWonders]
 description: Helps manage builder tasks and jobs.
 website: www.stealwonders.de
 
-depend: [PlayerUUIDCache]
+depend: [Multiverse-Core, PlayerUUIDCache]
 
 commands:
   # handled by the Aikar annotation command framework (ACF).
