--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'org.mariadb.jdbc:mariadb-java-client:2.6.0'
     compile 'co.aikar:acf-paper:0.5.0-SNAPSHOT'
     compile 'co.aikar:taskchain-bukkit:3.7.2'
+    compile 'net.kyori:text-api:3.0.4'
+    compile 'net.kyori:text-serializer-gson:3.0.4'
     compile 'net.kyori:text-adapter-bukkit:3.0.3'
 }
 
