MultiverseCore now is not required but if it's installed plugin will load after it.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,7 +6,8 @@ authors: [StealWonders]
 description: Helps manage builder tasks and jobs.
 website: www.stealwonders.de
 
-depend: [Multiverse-Core, PlayerUUIDCache]
+depend: [PlayerUUIDCache]
+softdepend: [Multiverse-Core]
 
 commands:
   # handled by the Aikar annotation command framework (ACF).
