--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'net.kyori:text-api:3.0.4'
     compile 'net.kyori:text-serializer-gson:3.0.4'
     compile 'net.kyori:text-adapter-bukkit:3.0.3'
+    compile 'com.github.stefvanschie.inventoryframework:IF:0.6.0'
 }
 
 import org.apache.tools.ant.filters.ReplaceTokens
@@ -56,6 +57,7 @@ shadowJar {
     relocate 'com.zaxxer.hikari', 'de.stealwonders.epicjobs.hikari'
     relocate 'org.mariadb.jdbc', 'de.stealwonders.epicjobs.jdbc'
     relocate 'co.aikar.commands', 'de.stealwonders.epicjobs.acf'
+    relocate 'com.github.stefvanschie.inventoryframework', 'org.empirewar.battlegrounds.inventoryframework'
 }
 
 build.dependsOn shadowJar
