--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,5 @@
-pluginGroup=de.stealwonders
-pluginVersion=1.1
+pluginGroup = de.stealwonders
+pluginVersion = 2.0
+pluginName = EpicJobs
+description = EpicJobs is a task management system created for the EpicQuestz build server.
+url = https://github.com/StealWonders/EpicJobs
