--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: EpicJobs
-version: @version@
+version: '$version'
 main: de.stealwonders.epicjobs.EpicJobs
 api-version: 1.13
 authors: [StealWonders]
