--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: EpicJobs
-version: @version@
+version: '$version'
 main: de.stealwonders.epicjobs.EpicJobs
-api-version: 1.13
+api-version: '1.20'
 authors: [StealWonders]
 description: Helps manage builder tasks and jobs.
-website: www.stealwonders.de
+website: https://www.epicquestz.com
 
 depend: [PlayerUUIDCache]
 softdepend: [Multiverse-Core, Hyperverse]
